syntax = "proto3";
option java_package = "com.roje.game.message.error";
option java_multiple_files = true;

message ErrorMessage{
    ErrorCode errCode = 1;
    string errMsg = 2;
}

enum ErrorCode{
    UnknownErrType = 0;
    HallNotFind = 1;
    GateNotFind = 2;
    NotLoginOn = 3;
    ConnectReset = 4;
    RepeatedReq = 5;
    AlreadyLogged = 6;
}